--- a/main.css
+++ b/main.css
@@ -18,16 +18,17 @@ body {
   width: 600px;
   height: 600px;
   flex-wrap: wrap;
+ 
   
 }
 
-#buttons {
+#buttons, input {
   display: flex;
   flex-direction: row;
   
 
 }
-button {
+button, input {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -35,7 +36,7 @@ button {
   font-size: 30px;
   font-weight: bolder;
   padding: 5px;
-  margin:10px 10px;
+  margin:10px 40px;
 }
 
 .cell {
@@ -56,7 +57,7 @@ background-color: greenyellow;
 
 }
 .food {
-  background-color: lightsalmon;
+  background-color: yellow;
 }
 
 
