--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ button, input {
   width: 5%;
   height: 5%;
   background-color: green;
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
 }
 
 
